--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
         <div class="max-w-5xl mx-auto px-6 relative z-10">
             <div class="glass-card p-12 rounded-[3rem] border border-red-500/50 shadow-[0_0_50px_rgba(220,38,38,0.4)] text-center relative">
                 <div class="text-6xl mb-6">🧧</div>
-                <h2 class="text-4xl font-bold text-white mb-4 festive-font">✨ AI 赛博春联生成器</h2>
-                <p class="text-yellow-200 mb-10 text-lg">输入一个关键词（比如：搞钱、猫咪、不加班），AI 现场为你赋诗一首，生成最潮的赛博对联！</p>
+                <h2 class="text-4xl font-bold text-white mb-4 festive-font">✨ 赛博春联生成器</h2>
+                <p class="text-yellow-200 mb-10 text-lg">输入一个关键词（比如：搞钱、猫咪、不加班），我会现场为你赋诗一首，生成最潮的赛博对联！</p>
                 
                 <div class="flex flex-col sm:flex-row gap-4 max-w-xl mx-auto mb-12">
                     <input type="text" id="couplet-keyword" placeholder="输入关键词..." class="flex-1 px-6 py-4 rounded-2xl focus:outline-none focus:ring-2 focus:ring-red-500 bg-black/60 border border-red-500/40 text-white text-lg font-bold placeholder-gray-500">
@@ -142,7 +142,7 @@
                     </div>
                 </div>
                 
-                <div id="couplet-loading" class="hidden text-yellow-300 font-bold text-lg animate-pulse mt-8">🤖 AI 正在疯狂查阅中华词库...</div>
+                <div id="couplet-loading" class="hidden text-yellow-300 font-bold text-lg animate-pulse mt-8">🤖 正在疯狂查阅中华词库...</div>
             </div>
         </div>
     </section>
@@ -203,7 +203,7 @@
             </div>
             <div id="chat-messages" class="flex-1 overflow-y-auto p-6 space-y-4 bg-black/50">
                 <div class="message ai-message p-4 rounded-2xl text-sm max-w-[90%] leading-relaxed shadow-lg font-medium">
-                    <p>哟！我是马年限定版赛博财神兼你的专属AI嘴替！🐴💅<br>听说这网站的主人是你最好的朋友？有什么新年愿望、想吐槽的人，或者需要算个桃花运的，尽管向本神开炮！我说话又直又好听，包你满意！</p>
+                    <p>哟！我是马年限定版赛博财神兼你的专属嘴替！🐴💅<br>听说这网站的主人是你最好的朋友？有什么新年愿望、想吐槽的人，或者需要算个桃花运的，尽管向本神开炮！我说话又直又好听，包你满意！</p>
                 </div>
             </div>
             <div class="p-4 bg-black/80 border-t border-pink-500/30 flex gap-3">
